<resources>
    <string name="app_name">餐宴网配送</string>
    <string name="app_name_info">餐宴网配送&#160;&#160;%1$s</string>
    <string name="wallet">钱包</string>
    <string name="income_withdraw">收入可提现</string>
    <string name="follow_the_rules">请严格遵守本规则</string>
    <string name="personal">个人资料</string>
    <string name="customerc_service">客服</string>
    <string name="rule">规则</string>
    <string name="about">关于</string>
    <string name="about_us">关于我们</string>
    <string name="suggestion">反馈</string>
    <string name="task">任务</string>
    <string name="pushmessage">消息公告</string>
    <string name="task_hall">任务大厅</string>
    <string name="open_notification_permission_tip">您的应用通知权限被禁止，请手动开启。</string>
    <string name="my_task">我的任务</string>
    <string name="refresh">刷新列表</string>
    <string name="sign_out">退出</string>
    <string name="settings">设置</string>
    <string name="refresh_little">刷新</string>
    <string name="order_empty">您还没有任何订单哦</string>
    <string name="no_order_yet">今日尚无任何订单</string>
    <string name="income_empty">您还没有收入记录哦~</string>
    <string name="take_order">立即接单~</string>
    <string name="take_order2">接 单</string>
    <string name="income">总收入</string>
    <string name="yuan">元</string>
    <string name="draw_cash">提现</string>
    <string name="income_and_expense">提现记录</string>
    <string name="income_history">收入记录</string>
    <string name="payment_detail">收支明细</string>
    <string name="head">头像</string>
    <string name="login_phone">登录手机号</string>
    <string name="my_invitation_code">我的邀请码</string>
    <string name="edit_psw">修改密码</string>
    <string name="photoPickerNotFoundText">手机中无可用的图片</string>
    <string name="photograph">拍照</string>
    <string name="album">相册</string>
    <string name="cancel">取消</string>
    <string name="company">天津食健科技发展有限公司</string>
    <string name="copy_right">Copyright©2016-2018天津食健科技发展有限公司</string>
    <string name="right">All rights reserved</string>
    <string name="suggestion_hint">请输入您的意见，我们将不断优化用户体验</string>
    <string name="phone_hint">请留下您的手机号码</string>
    <string name="word_size">200字以内</string>
    <string name="submit">提交</string>
    <string name="next">下一步</string>
    <string name="confirm_modify">确认修改</string>
    <string name="complete">完成</string>
    <string name="mine">我</string>
    <string name="send">发</string>
    <string name="get">收</string>
    <string name="send_loc">发货：</string>
    <string name="get_loc">收货：</string>
    <string name="confirm_arrive">确认取货</string>
    <string name="take_order_now">立即接单</string>
    <string name="confirm_send">确认送达</string>
    <string name="confirm_recovery">确认回收</string>
    <string name="order_detail">订单详情</string>
    <string name="contact_customer">联系客服</string>
    <string name="consignee">收货人：</string>
    <string name="phone">电话：</string>
    <string name="dial">点击拨打</string>
    <string name="get_time">取货时间：</string>
    <string name="remarks">买家备注：</string>
    <string name="cancel_order">取消订单</string>
    <string name="take_pic">损坏拍照</string>
    <string name="recovery">直接回收</string>
    <string name="note">注：收到餐具时若有损坏，请拍照留下凭证</string>
    <string name="login">登录</string>
    <string name="phone_num">请输入手机号</string>
    <string name="password">请输入密码（6-20位字母与数字组合）</string>
    <string name="input_password">请输入密码</string>
    <string name="new_register">新用户注册</string>
    <string name="forget_psw">忘记密码？</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="phone_login">手机快速登录</string>
    <string name="register">注册</string>
    <string name="register_phone">请输入手机号</string>
    <string name="register_code">请输入验证码</string>
    <string name="register_psw_1">请输入密码</string>
    <string name="register_psw_2">请确认密码</string>
    <string name="confirm_pwd">确认密码</string>

    <string name="send_code">获取验证码</string>
    <string name="review">资料审核</string>
    <string name="submit_to_review">提交审核</string>
    <string name="real_name">真实姓名</string>
    <string name="id_card">身份证号</string>
    <string name="review_first">1.上传身份证照片</string>
    <string name="review_second">2.上传手持身份证照片</string>
    <string name="review_third">3.上传驾驶执照照片(选填)</string>
    <string name="review_fourth">4.上传行驶证照片(选填)</string>
    <string name="id_front">身份证正面</string>
    <string name="id_reverse">身份证反面</string>
    <string name="review_1">请确保您的身份证摆放平整，信息清晰可见</string>
    <string name="review_2">请确保您的五官和证件信息清晰可见</string>
    <string name="review_3">请确保证件信息清晰可见</string>
    <string name="authentication">身份验证</string>
    <string name="bind_note">*此号码是联系您的唯一方式，请填写您本人的手机号</string>
    <string name="bind_phone">绑定新手机</string>
    <string name="new_psw">请输入新密码（6-20位字母与数字组合）</string>
    <string name="confirm_psw">确认新密码</string>
    <string name="input_new_psw">请输入新密码</string>
    <string name="confirm_new_psw">确认新密码</string>
    <string name="alipay">支付宝提现</string>
    <string name="unionpay">银行卡提现</string>
    <string name="wxpay">微信提现</string>
    <string name="picture">图片</string>
    <string name="all_picture">所有图片</string>
    <string name="preview">预览</string>
    <string name="account">账号：</string>
    <string name="union_account">银行卡号：</string>
    <string name="account_hint">请输入支付宝账号</string>
    <string name="union_account_hint">请输入银行卡账号</string>
    <string name="wx_account_hint">请输入微信账号</string>
    <string name="check">请认真核对您的支付宝账户</string>
    <string name="union_check">请认真核对您的银行卡账号</string>
    <string name="wx_check">请认真核对您的微信账号</string>
    <string name="cash">提现金额：</string>
    <string name="cash_hint">请输入提现金额</string>
    <string name="balance">账户余额：</string>
    <string name="application_abnormal">很抱歉,程序出现异常,即将退出</string>
    <string name="dollars">¥</string>
    <string name="login_problem">登录遇到问题？请咨询</string>
    <string name="login_problem_phone_num"><u>400-022-5888</u></string>
    <string name="service_agreement"><u>《配送员服务协议》</u></string>
    <string name="deliver_identity">配送身份</string>
    <string name="deliver_vehicle">配送工具</string>
    <string name="account_info">账户资料</string>
    <string name="clear_cache">清除缓存</string>
    <string name="safe_exit">安全退出</string>
    <string name="remember_old_pwd">我记得原密码</string>
    <string name="forget_old_pwd">我忘记原密码</string>
    <string name="old_pwd">原密码</string>
    <string name="input_old_pwd">请输入原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="set_new_pwd">请输入新密码（6-20位字母与数字组合）</string>
    <string name="set_pwd_validate">设置密码前请完成验证</string>
    <string name="receive_msg">能接收短信</string>
    <string name="not_receive_msg">不能接收短信，联系客服</string>
    <string name="input_msg_code">输入短信验证码</string>
    <string name="send_again">重新发送</string>
    <string name="social_capacity">社会运力</string>
    <string name="the_feast_capacity">餐宴网运力</string>
    <string name="electric_car">电动车</string>
    <string name="car">汽车</string>
    <string name="location_detail">位置详情</string>
    <string name="input_verify_code_desc">请输入与此订单对应的4位验证码</string>
    <string name="select_wanted_location">选择所在位置</string>
    <string name="select_loc">选择地区</string>
    <string name="the_agreement">配送员服务协议</string>
    <string name="at_the_loc">所在地区</string>
    <string name="please_select">请选择</string>
    <string name="i_have_read_and_agree">我已阅读并同意</string>
    <string name="banquet_withdraw_article">《餐宴网提现服务协议》</string>
    <string name="confirm_withdraw">确定并提现</string>
    <string name="actual_money">实际到账</string>
    <string name="tax_fee">税费</string>
    <string name="service_fee">手续费</string>
    <string name="click_and_modify">点击修改</string>
    <string name="withdraw_money">提现金额</string>
    <string name="can_withdraw_money">可提现金额</string>
    <string name="bank_card">银行卡</string>
    <string name="withdraw_way">提现方式</string>
    <string name="account_name">账户名</string>
    <string name="select_bank">选择银行</string>
    <string name="input_account_name">请输入账户名</string>
    <string name="input_id_card">请输入身份证号</string>
    <string name="account_name_cannot_be_empty">账户名不能为空</string>
    <string name="please_choose_bank">请选择开户银行</string>
    <string name="bank_account_bind_success">银行账户绑定成功</string>
    <string name="sms_will_be_sended_to_this_phone">短信验证码已发送至</string>
    <string name="account_bind_success">账户绑定成功</string>
    <string name="mobile_verify_success">手机号码验证通过</string>
    <string name="bank_card_bind_success">银行卡绑定成功</string>
    <string name="can_withdraw_money_description">可提现金额说明</string>
    <string name="withdraw_tax_fee_description">提现税费说明</string>
    <string name="choose_bank">选择开户银行</string>
    <string name="withdraw_service_description">提现手续费说明</string>
    <string name="confirm_accept_order_tip">请勿过早点击备餐完成按钮来呼叫配送人员，如配送人员等待时间过长，可能会进行相关处理。</string>
    <string name="please_bind_bank_card">请先绑定银行卡</string>
    <string name="alipay_account">支付宝账号</string>
    <string name="input_alipay_account">请输入支付宝账号</string>
    <string name="confirm_alipay_account">支付宝实名认证名须与实名认证的姓名一致，支付宝信息有误将导致提现失败，请仔细核对您的支付宝信息。</string>
    <string name="input_mobile_phone">请输入手机号</string>
    <string name="mobile">手机号</string>
    <string name="caution">注：</string>
    <string name="bank_master">开户银行</string>
    <string name="please_choose">请选择</string>
    <string name="card_number">银行卡号</string>
    <string name="input_bank_account">请输入银行卡号</string>
    <string name="bank_phone">预留手机号</string>
    <string name="input_bank_phone">请输入银行卡预留手机号</string>
    <string name="confirm_bank_info">银行卡账户名须与实名认证的姓名一致，银行卡信息有误将导致提现失败，请仔细核对您的银行卡信息。</string>
    <string name="next_step">下一步</string>
    <string name="in_out_details">收支明细</string>
    <string name="withdraw_account_manage">提现账户管理</string>
    <string name="invalid_phone_number">无效的手机号码</string>
    <string name="please_input_bank_account">请填写要提现的银行卡卡号</string>
    <string name="check_network">请求失败</string>
    <string name="verify_code_is_sended">验证码已发送</string>
    <string name="please_wait_for_a_moment">请稍候</string>
    <string name="bank_account_info">%1$s(尾号%2$s)</string>
    <string name="rmb">¥</string>
    <string name="multiply">X</string>
    <string name="minus_rmb">-¥</string>
    <string name="rmb_space">¥&#160;</string>
    <string name="cannot_withdraw_toast">您未同意餐宴网提现服务协议，无法进行提现操作</string>
    <string name="withdraw_rules">提现规则</string>
    <string name="withdraw_request_submit_success">提现申请已成功提交</string>
    <string name="history_orders">历史订单</string>
    <string name="contact_phone">联系电话：%1$s</string>
    <string name="contact_trainer">您好，您还没有参与餐宴网配送培训，请联系以下相关车队负责人参与培训，培训完成后才可接单。</string>
    <string name="trainer_name">负责人：%1$s</string>
    <string name="expect_arrive_restaurant_name">预计%1$s到达餐厅</string>
    <string name="box_count">餐箱数量：%1$s</string>
    <string name="id_card_17_only_number">身份证前17位只能是数字</string>
    <string name="id_card_last_character_onlay_number_or_x">身份证最后一位只能是x或数字</string>
    <string name="login_again_tip">您的账号已在其他设备登录，如非您本人操作，则密码可能已经泄露，建议您尽快修改密码。</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="refreshing">刷新中...</string>
    <string name="loading">加载中...</string>
    <string name="release_to_refresh">松手刷新</string>
    <string name="pull_up_to_get_more">上拉获取更多</string>
    <string name="release_to_get_more">可以松手了</string>
    <string name="permission_set_manipulate">餐宴网配送定位权限被禁止，请手动开启</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="wait_get_goods">待取货</string>
    <string name="delivering">配送中</string>
    <string name="finished">已完成</string>
    <string name="input_mobile">请输入手机号</string>
    <string name="style_pwd">密码格式不正确</string>
    <string name="check_pwd">两次新密码输入不一致</string>



</resources>
