<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/activity_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="92px"
        android:background="#383635">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="92px"
            android:layout_height="92px"
            android:layout_centerVertical="true"
            android:scaleType="center"
            android:visibility="gone"
            android:src="@mipmap/back_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="32px"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv1"
        android:layout_width="192px"
        android:layout_height="192px"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180px"
        android:src="@mipmap/logo"/>

    <LinearLayout
        android:layout_width="660px"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="452px"
        android:orientation="vertical">

        <EditText
            android:textCursorDrawable="@drawable/my_cursor"
            android:id="@+id/et_phone"
            style="@style/EditTextWhiteStyle"
            android:layout_width="match_parent"
            android:layout_height="92px"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_et_bg"
            android:gravity="center_vertical"
            android:hint="@string/phone_num"
            android:inputType="number"
            android:maxLength="11"
            android:paddingLeft="@dimen/view_10_dip"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/viewfinder_mask"
            android:textSize="28px"/>

        <EditText
            android:textCursorDrawable="@drawable/my_cursor"
            android:text=""
            android:id="@+id/et_psw"
            style="@style/EditTextWhiteStyle"
            android:layout_width="match_parent"
            android:layout_height="92px"
            android:layout_centerVertical="true"
            android:layout_marginTop="20px"
            android:layout_toRightOf="@+id/iv_psw"
            android:background="@drawable/shape_et_bg"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
            android:gravity="center_vertical"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="@dimen/view_10_dip"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/viewfinder_mask"
            android:textSize="28px"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="88px"
            android:layout_marginTop="50px"
            android:background="@drawable/login_btn2"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="28px"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70px"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_forget_psw"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/forget_psw"
                android:gravity="center"
                android:textColor="@color/login_btn_color"
                android:textSize="24px"/>

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:text="@string/new_register"
                android:textColor="@color/login_btn_color"
                android:textSize="24px"/>
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30px">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/login_problem"
                android:textColor="@color/home_text_mid"
                android:textSize="26px"/>

            <TextView
                android:id="@+id/tv_service_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:text="@string/login_problem_phone_num"
                android:textColor="@color/color_4C80E3"
                android:textSize="26px"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
